# openai-responses-python-quickstart

./: .env.example  .gitignore  CLAUDE.md  README.md  create_assistant.py  main.py  pyproject.toml  tool.config.json
.claude/: settings.local.json
.claude/commands/: brainstorming.md  test-driven-development.md  writing-commands.md
.claude/hooks/: lint-and-typecheck.sh
.github/workflows/: release.yml
docs/: chat-orchestration.md  parallel-tool-calls.md
routers/: api-keys.py  api_keys.py  assistants.py  assistants_files.py  audio.py  chat.py  files.py  messages.py  setup.py  tools.py
routes/: assistants.py  assistants_files.py  files.py  threads.py  threads_actions.py  threads_messages.py
static/: audio-recorder.js  collapsible.js  stream-md.js  styles.css
templates/: index.html  layout.html  setup.html
templates/components/: assistant-run.html  assistant-step.html  chat-turn.html  chat.html  file-card.html  file-list-page.html  file-list.html  file-viewer.html  loading_dots.html  mcp-approval-request.html  mcp-row.html  registry-row.html  user-message.html  warnings.html  (+1 more)
tests/: conftest.py  test_audio_transcription.py  test_code_interpreter_image_output.py  test_computer_use.py  test_file_carousel.py  test_file_delete.py  test_file_delete_all.py  test_file_list_pagination.py  test_file_list_pagination_live.py  test_file_upload.py  test_image_generation_live.py  test_image_upload.py  test_image_upload_live.py  test_parallel_tools.py  test_setup_page_rendering.py  test_tool_output_rendering.py  test_web_search_live.py
utils/: computer_use.py  config.py  conversations.py  create_assistant.py  custom_functions.py  env_file.py  files.py  function_calling.py  function_definitions.py  registry.py  streaming.py  tool_tasks.py  weather.py
(+4 files in other folders)
