[project]
name = "openai-responses-python-quickstart"
version = "1.2.1"
description = "A quickstart template using the OpenAI Assistants API with Python, FastAPI, Jinja2, and HTMX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.3",
    "jinja2>=3.1.4",
    "openai>=1.102.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]
