[project]
name = "openai-responses-python-quickstart"
version = "1.4.11"
description = "A quickstart template using the OpenAI Assistants API with Python, FastAPI, Jinja2, and HTMX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.3",
    "jinja2>=3.1.4",
    "openai>=2.0.0",
    "playwright>=1.57.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.32.0",
]

[tool.pytest.ini_options]
markers = [
    "live: tests that hit the real OpenAI API (require valid OPENAI_API_KEY)",
]

[dependency-groups]
dev = [
    "pillow>=12.1.1",
    "pytest-playwright>=0.7.2",
    "ruff>=0.15.5",
    "ty>=0.0.1a21",
]
